--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,8 @@
     <title>Villiotech</title>
     <style>
       html:not([data-theme]) { visibility: hidden; }
+      html[data-theme="villiotech-night"], html[data-theme="villiotech-night"] body { background: #1a1625; color: #e0dfe4; }
+      html[data-theme="villiotech-day"], html[data-theme="villiotech-day"] body { background: #eeedf2; color: #1f1f2e; }
     </style>
     <script>
       const saved = localStorage.getItem('villiotech-theme');
