fix: background-color only in inline style, html selector for gradient

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,8 @@
     <title>Villiotech</title>
     <style>
       html:not([data-theme]) { visibility: hidden; }
-      html[data-theme="villiotech-night"], html[data-theme="villiotech-night"] body { background: #1a1625; color: #e0dfe4; }
-      html[data-theme="villiotech-day"], html[data-theme="villiotech-day"] body { background: #eeedf2; color: #1f1f2e; }
+      html[data-theme="villiotech-night"] { background-color: #1a1625 !important; color: #e0dfe4; }
+      html[data-theme="villiotech-day"] { background-color: #eeedf2 !important; color: #1f1f2e; }
     </style>
     <script>
       const saved = localStorage.getItem('villiotech-theme');
