Add custom typography: Space Grotesk + Sora
- Headings: Space Grotesk (modern, technical, engineering feel)
- Body: Sora (geometric, premium, highly readable)
- Google Fonts with preconnect for performance

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,10 @@
     <meta name="geo.region" content="HU-BU" />
     <meta name="geo.placename" content="Budapest" />
     <title>Villiotech</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Sora:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
       html:not([data-theme]) { visibility: hidden; }
       html[data-theme="villiotech-night"] { background-color: #1a1625 !important; color: #e0dfe4; }
